Wed Sep 28 12:18:42 UTC 2010  Marijke Hengstmengel <mhengstmengel@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_util.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svh.cpp:
        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be/be_visitor_ccm_pre_proc.cpp:
        * TAO_IDL/be_include/be_global.h:
        First step of making it possible to disable events in CCM. 

Tue Sep 28 15:02:48 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * orbsvcs/tests/Bug_2112_Regression/client.cpp:

          Fixed #include to work with installed build.

Tue Sep 28 14:18:36 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * orbsvcs/tests/Bug_3891_Regression/Bug_3891_Regression.mpc:

          Test won't build in CORBA/e Micro

        * orbsvcs/tests/Bug_3891_Regression/server.cpp:

          Whitespace cleanup, avoid warnings with older GCC's.

Tue Sep 28 12:10:42 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Environment.h:
        * tao/Environment.cpp:
        * tao/Exception.h:
        * tao/Fault_Tolerance_Service.h:
        * tao/Flushing_Strategy.h:
        * tao/GIOP_Message_State.h:
        * tao/IIOP_Acceptor.h:
        * tao/IIOP_Connection_Handler.h:
        * tao/IIOP_Endpoint.h:
        * tao/Incoming_Message_Queue.h:
        * tao/Invocation_Adapter.h:
        * tao/Invocation_Base.h:
        * tao/Leader_Follower.h:
        * tests/Client_Leaks/Client_Task.h:
        * tests/MT_Timeout/Client_Task.h:
          Doxygen fixes

Tue Sep 28 09:31:34 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_2112_Regression/client.cpp:
          Fixed not used warnings

Tue Sep 28 08:11:50 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * orbsvcs/tests/InterfaceRepo/Bug_2962_Regression/test.idl:
          Resolved error regarding anonymous types.

Mon Sep 27 15:19:09 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * orbsvcs/orbsvcs/Notify/Random_File.cpp: